crates/rulesteward-fapolicyd/tests/snapshots/E02__non-hex-filehash.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[E02] sev=Error line=1 col=1 span=0..90 :: invalid value for `filehash=`: expected 64 hex chars, contains non-hex character
