crates/rulesteward-fapolicyd/tests/snapshots/E02__uid-overflow.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[E02] sev=Error line=1 col=1 span=0..32 :: invalid value for `uid=`: expected u32 decimal, name, or `unset`
